--- a/_data/people.yml
+++ b/_data/people.yml
@@ -2,7 +2,7 @@
 
 
 profx:
-    display_name: "肖航  Hang Xiao"
+    display_name: "李纹  Wen Li"
     github: xiaohang007
     role: faculty
     image: /img/people/hang.jpg
